deploy/retrieveUnpackaged/objects/Churn__c.object
<CustomObject>
    <description>Shows the forecast defection churn amount by account - will have finalized checked when the churn has been processed</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Churn</relationshipLabel>
        <relationshipName>Churn</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Churn_Date__c</fullName>
        <description>shows the first of the month that the churn is expected</description>
        <inlineHelpText>Will always be the first day of the month the churn is expected.</inlineHelpText>
        <label>Churn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Memo__c</fullName>
        <description>Shows the final Credit Memo deductions caused by Sales.</description>
        <inlineHelpText>Shows the final Credit Memo deductions caused by Sales.</inlineHelpText>
        <label>Credit Memo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_BDC__c</fullName>
        <description>current BDC on account associated with Churn record</description>
        <label>Current BDC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Churn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>shows the finalized amount that churned</description>
        <inlineHelpText>This is the finalized amount of defection churn for the account.</inlineHelpText>
        <label>Final Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finalized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>shows if the churn data has been finalized by operations</description>
        <inlineHelpText>This will be checked when the final amount has been finalized.</inlineHelpText>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <description>shows the % probability of the churn occurring</description>
        <inlineHelpText>This is the % probability that it will churn.</inlineHelpText>
        <label>Probability %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Projected_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>this is the total that is projected to churn</description>
        <inlineHelpText>Projected amount to churn.</inlineHelpText>
        <label>Projected Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Churn</label>
    <nameField>
        <displayFormat>C-{000000000}</displayFormat>
        <label>Churn Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Churn</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>